Commit incl Assignment1

--- a/Modul2-CSS/excercises/exc1.html
+++ b/Modul2-CSS/excercises/exc1.html
@@ -7,10 +7,10 @@
     <title>Övning 1 - formatering med intern css i head</title>
     <style>
         h1, h2, p {
-            font-family: Verdana; 
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
         h1 {
-            font-size: 2.5rem;
+            font-size: 3rem;
             text-align: center;
         }
         h2 {
@@ -20,7 +20,7 @@
             font-size: 0.9rem;
         }
         body {
-            background-color: bisque;
+            background-color: #b2ebf2;
         }
     
     </style>
@@ -54,6 +54,15 @@
         Det blev ett stycke till. <br>
         Jag reglerade 1) gemensam teckenfont, 2) tre olika storlek på h1, h2 och p, 3) bakgrundsfärg. <br>
         Jag började med att göra som helt separata regler, men tänkte rätt snart att jag ville försöka samordna reglerna. 
+    </p>
+    <p>
+        Om jag vill att ALL text skall ha samma typsnitt, anger jag det i body. <br>
+        Behöver inte specificeras för h1, h2, p, etc. 
+    </p>
+    <p>
+        Genom att klicka på färg-rutan i granskningsfönstret, kan jag aktivera palett. <br>
+        Väljer jag ny färg där, kan jag bara kopiera koden och klistra in i VSC-koden. <br>
+        Och nu har jag gjort det och valde en ljusblå färg istället för den beige. 
     </p>
     
 </body>
