--- a/Modul2-CSS/excercises/exc2.html
+++ b/Modul2-CSS/excercises/exc2.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Övning 2 -- formatering med extern css</title>
     <link rel="stylesheet" href="exc2.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Special+Elite');
+        @import url('https://fonts.googleapis.com/css?family=Quicksand');
+    </style>
 </head>
 <body>
     <h1>Övning 2</h1>
