--- a/Modul2-CSS/excercises/exc3Contact.html
+++ b/Modul2-CSS/excercises/exc3Contact.html
@@ -29,8 +29,9 @@
              <a href="https://www.facebook.com/annamajaalltmojligt/" target="_blank">länk till facebook</a> <br>
         </p>
         <p>
-            Annars går det bra att skicka pm till mig via min vanliga facebooksida också. <br>
-            <a href="https://www.facebook.com/annamaja.lithner?ref=bookmarks" target="_blank">Anna-Maja</a>
+            Annars går det bra att skicka pm till mig via  <a href="https://www.facebook.com/annamaja.lithner?ref=bookmarks" target="_blank">min vanliga facebook-sida</a> 
+             <br>
+           
         </p>
     
 </body>
