Commit incl complete fully functioning version of assignment1.

--- a/Modul2-CSS/assignment1-cv/meritforteckning.html
+++ b/Modul2-CSS/assignment1-cv/meritforteckning.html
@@ -30,9 +30,12 @@
 </head>
 <body>
     <div class="center">
-    <a href="start.html"> -- Startsida </a> &bull; 
-    <a href="meritforteckning.html">  Meritförteckning </a> &bull;
-    <a href="kontakt.html"> Kontaktuppgifter -- </a> <br>
+        <p style="text-align: center">
+            <a href="start.html">Startsida</a> &bull; 
+            <a href="meritforteckning.html">  Meritförteckning </a> &bull;
+            <a href="kontakt.html"> Kontaktuppgifter </a> &bull;
+            <a href="om-mig.html">Om mig</a> 
+        </p>
 
     <h1>Meritförteckning</h1>
 
@@ -44,19 +47,43 @@
     <h2>Utbildning</h2>
     <p>
         <ul>
-            <li>Grundskola:skolgång i Nora, Örebro län</li>
+            <li>Grundskola: skolgång i Nora, Örebro län</li>
             <li>Gymnasium: 3-årig humanistisk linje, Lindeskolan, Örebro län</li> <br>
+        </ul>
+        <b>Högskola och universitet </b> <br>
+        <ul>
             <li>Örebro Högskola: sociologi 20p</li>
             <li>Stockholms universitet: Lingvistik 20p, fonetik 20p</li>
             <li>Karolinska Institutet: Logopedprogrammet 160p (4 år)</li>
             <li>Jensen Komvux: Matematik 2a, Matematik 3b, Programmering 1</li>
-            <li>Nackademin YH: Kvalitetssäkrare och testare inom IT (läs mer 
-                <a href="https://nackademin.se/utbildningar/kvalitetssakrare-testare-inom-it/" target="_blank">här</a></li>
         </ul>
+        <b>Pågående utbildning</b>
+        <ul>
+            <li>Nackademin YH: Kvalitetssäkrare och testare inom IT. <br> 
+            Allmän info om utbildningen: läs mer 
+            <a href="https://nackademin.se/utbildningar/kvalitetssakrare-testare-inom-it/" target="_blank">här</a>.</li>
+        </ul>
+        <b>Genomförda delkurser på nuvarande utbildning: </b> <br>
+        <ul>
+            <li>   Introduktion till kvalitetssäkring inom IT <br></li>
+            <li>   Objektorienterad programmering <br></li>
+            <li>     Databasteknik för testare <br></li>
+        </ul>
+        <i> Pågående delkurs: </i> <br>
+        <ul>
+            <li>Frontend <br></li>
+        </ul>
+        <i> Närmast påföljande delkurs: </i> <br>
+        <ul>
+            <li>Backend <br></li>
+        </ul>
+    </p>
+    <p>
+       
     </p>
 
     <h2>Arbetslivserfarenhet</h2>
-    
+    <br>
     <h3>Legitimerad logoped</h3>
     <p>
         1997-2014: <br>
@@ -70,22 +97,26 @@
         Läs mer om logopedyrket <a href="https://sv.wikipedia.org/wiki/Logoped" target="_blank">här</a> <br>
 
     </p>
-
+    <br>    
     <h3>Kortare anställningar</h3>
     <p>
         Huvudsakligen under perioden 1987 till 1994.
         <ul> 
-            <li> Café Strandstugan - <a href="http://noraglass.se/strandstugan/" target="_blank"> läs mer här</a></li>
+            <li> Café Strandstugan</li>
             <li>  hemtjänst</li>
             <li>personlig assistent</li>
             <li>lokalvård</li>
             <li>lärarvikarie</li>
             <li>Hjälpmedel Stockholm, förrådet (under 2016; arbetsträning som del i rehabilitering efter sjukskrivning)</li>
         </ul>
+        Vill du läsa mer om förtjusande Strandstugan i min förtjusande hemstad Nora, 
+        kan du göra det <a href="http://noraglass.se/strandstugan/" target="_blank" style="text-decoration:none">här</a>.
     </p>
+    <br>
     <h3>Volontärarbete</h3>
     <p>
-        Ledare vid <a href="http://www.malingsbokonfirmation.se/" target="_blank">Malingsbo konfirmationsläger</a>, sommarveckor 1990-1993
+        Ledare vid Malingsbo konfirmationsläger, sommarveckor 1990-1993, <br>
+        Vill du läsa mer om lägerverksamheten, kan du göra det <a href="http://www.malingsbokonfirmation.se/" target="_blank" style="text-decoration:none">här</a>.
     </p>
 </div>
 </body>
