--- a/Modul2-CSS/assignment1-cv/start.html
+++ b/Modul2-CSS/assignment1-cv/start.html
@@ -33,21 +33,30 @@
 </head>
 <body>
 <div class="center">
-        <a href="start.html"> -- Startsida </a> &bull; 
+    <p style="text-align: center">
+        <a href="start.html">Startsida</a> &bull; 
         <a href="meritforteckning.html">  Meritförteckning </a> &bull;
-        <a href="kontakt.html"> Kontaktuppgifter -- </a>
+        <a href="kontakt.html"> Kontaktuppgifter </a> &bull;
+        <a href="om-mig.html">Om mig</a>
+    </p>
     <h1>
         Anna-Maja Lithner
     </h1>
 
     <img src="bilder/anna-maja.jpg" alt="Anna-Maja Lithner"> 
-
     <p>
-        <a href="meritforteckning.html">Meritförteckning</a> - utbildningar och arbetslivserfarenhet. <br>
-        Ett urval som kommer att kompletteras.
+        Här möter du mig, Anna-Maja Lithner. <br>
+        Jag går termin 2 på utbildningen till kvalitetssäkrare och testare inom IT, som hålls av Nackademin. 
     </p>
     <p>
-        <a href="kontakt.html"> Kontaktuppgifter</a> - adress-, telefon- och mailuppgifter till mig samt till min skola.
+        På sidan <a href="meritforteckning.html">"Meritförteckning"</a> beskriver jag kort mina utbildningar och min arbetslivserfarenhet. <br>
+        Innehållet kan komma att att kompletteras. <br>
+        <br>
+        På sidan <a href="kontakt.html">"Kontaktuppgifter"</a> finns alla adress-, telefon- och mailuppgifter till mig samt till min skola. <br>
+        <br>
+        Sidan <a href="om-mig.html">"Om mig"</a> beskriver lite mer om min bakgrund. 
+        Där får du 
+        förhoppningsvis en uppfattning om mig som person, mina intressen mm.
     </p>
 </div>
 </body>
