--- a/Modul2-CSS/assignment1-cv/kontakt.html
+++ b/Modul2-CSS/assignment1-cv/kontakt.html
@@ -30,9 +30,12 @@
 
 <body>
     <div class="center">
-    <a href="start.html"> -- Startsida </a> &bull; 
-    <a href="meritforteckning.html">  Meritförteckning </a> &bull;
-    <a href="kontakt.html"> Kontaktuppgifter -- </a> <br>
+        <p style="text-align: center">
+            <a href="start.html">Startsida</a> &bull; 
+            <a href="meritforteckning.html">  Meritförteckning </a> &bull;
+            <a href="kontakt.html"> Kontaktuppgifter </a> &bull;
+            <a href="om-mig.html">Om mig</a>
+        </p>
     
     <h1>Kontaktuppgifter</h1>
     <img 
