New commit. Assignment - all comments deleted (disturbed the code). New documents in Modul3.

--- a/Modul2-CSS/assignment1-cv/meritforteckning.html
+++ b/Modul2-CSS/assignment1-cv/meritforteckning.html
@@ -1,18 +1,3 @@
-<!-- Start (Hem): Skriv ditt namn som huvudrubrik (h1) och visa en bild på dig under rubriken. 
-     Formatera ditt namn med en valfri snygg ”Google Font”.  
-     Ändra även färg och storlek. 
-     • Meritförteckning: Skriv ditt CV. Lägg till minst dessa rubriker: Arbetslivserfarenhet och Utbildning.  
-     Formatera rubriker och text med CSS (valfritt).
-      • Kontakt: Skriv dina kontaktuppgifter och bädda in en karta från  Google Maps (t.ex. skolans adress) 
-      • Skapa en enkel navigering högst upp på alla sidor, där du länkar alla sidor till varandra.  
-      Formatera länkarna med CSS.  Ta bort understrykning och visa en annan färg vid överrullning (hover). 
-      • Ändra bredden på sidorna till 900 pixlar.
-       Placera innehållet på alla sidor i mitten med automatiska marginaler. 
-       • Lägg till 5 pixlar margin, padding och border samt runda hörn på sidorna. 
-       • Validera alla sidor med W3C Validator: https://validator.w3.org/ 
-     • OBS! all CSS-kod måste sparas i en separat fil (Extern CSS). 
-     • OBS! Använd inte en färdig mall (template). Allt måste kodas manuellt. 
--->
 
 <!DOCTYPE html>
 <html lang="sv">
@@ -48,7 +33,7 @@
     <p>
         <ul>
             <li>Grundskola: skolgång i Nora, Örebro län</li>
-            <li>Gymnasium: 3-årig humanistisk linje, Lindeskolan, Örebro län</li> <br>
+            <li>Gymnasium: 3-årig humanistisk linje, Lindeskolan, Örebro län</li> 
         </ul>
         <b>Högskola och universitet </b> <br>
         <ul>
@@ -59,23 +44,23 @@
         </ul>
         <b>Pågående utbildning</b>
         <ul>
-            <li>Nackademin YH: Kvalitetssäkrare och testare inom IT. <br> 
+            <li>Nackademin YH: Kvalitetssäkrare och testare inom IT. 
             Allmän info om utbildningen: läs mer 
             <a href="https://nackademin.se/utbildningar/kvalitetssakrare-testare-inom-it/" target="_blank">här</a>.</li>
         </ul>
         <b>Genomförda delkurser på nuvarande utbildning: </b> <br>
         <ul>
-            <li>   Introduktion till kvalitetssäkring inom IT <br></li>
-            <li>   Objektorienterad programmering <br></li>
-            <li>     Databasteknik för testare <br></li>
+            <li>   Introduktion till kvalitetssäkring inom IT</li>
+            <li>   Objektorienterad programmering </li>
+            <li>     Databasteknik för testare </li>
         </ul>
         <i> Pågående delkurs: </i> <br>
         <ul>
-            <li>Frontend <br></li>
+            <li>Frontend </li>
         </ul>
         <i> Närmast påföljande delkurs: </i> <br>
         <ul>
-            <li>Backend <br></li>
+            <li>Backend </li>
         </ul>
     </p>
     <p>
