new directories and new files. incl excercises from slides.

--- a/kimsSida/about.html
+++ b/kimsSida/about.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Om Kim</title>
+   
+  <!--  <link rel="stylesheet" href="kim.css"> --> 
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Oswald" rel="stylesheet">
+
+    <style>
+            #navigation a {
+                display: block;
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                font-family: 'Oswald';
+                background-color: blue;
+                color: white;
+                width: 100px;
+                padding: 10px;
+                border-bottom: 1px solid white;
+                text-decoration: none;
+            }
+        </style>
 </head>
 <body>
+        <p id="navigation a">
+                <a href="home.html">Startsida</a> &bull;
+                <a href="intressen.html"> Intressen </a> &bull;
+                <a href="about.html">Om mig</a>
+            </p>
     
 </body>
 </html>
