--- a/kimsSida/intressen.html
+++ b/kimsSida/intressen.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kim - intressen</title>
+   
+  <!--  <link rel="stylesheet" href="kim.css"> -->
+    
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Oswald" rel="stylesheet">
 </head>
-<body>
+<body> 
+        <a href="home.html">Startsida</a> &bull;
+        <a href="intressen.html"> Intressen </a> &bull;
+        <a href="about.html">Om mig</a>
     
 </body>
 </html>
