--- a/a-inlämningar/inl2-calculator.html
+++ b/a-inlämningar/inl2-calculator.html
@@ -36,7 +36,7 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    <input type="button" name=" backspace " value=" back  " onclick="backspace()">
+                    <input type="button" name=" backspace " value=" back  " onclick="backa()">
                 </td>
                 <td>
 
