--- a/a-inlämningar/assignment3/startbootstrap-creative-gh-pages/startbootstrap-creative-gh-pages/index.html
+++ b/a-inlämningar/assignment3/startbootstrap-creative-gh-pages/startbootstrap-creative-gh-pages/index.html
@@ -8,7 +8,12 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <!-- Custumized browser tab icon -->
+  <!-- Utgått från mall "creative" från startbootstrap. 
+    Ändringar i färger har gjorts i .css, vissa ändringar av teckenstorlek, padding, skuggning mm har gjorts i html.  
+    Detta eftersom jag inte riktigt förstått exakt var i .css det har styrts.
+    Egna kommentarer finns före nya sektioner. Standardkommentarer ligger kvar. -->
+
+  <!-- Tillägg av custumized browser tab icon -->
   <link rel="icon" type="image/png" href="img/invicon_sKe_icon.ico" sizes="16x16">
   <title>Monster Vibes</title>
 
@@ -33,6 +38,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
+  <!-- Ändringar av knapptext -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
@@ -59,6 +65,7 @@
     </div>
   </nav>
 
+  <!-- Ändringar av textinnehåll och skuggning -->
   <header class="masthead text-center text-white d-flex">
     <div class="container my-auto">
       <div class="row">
@@ -76,6 +83,7 @@
     </div>
   </header>
 
+  <!-- Ändringar av textinnehåll, tillägg av logo, ändring av text på knapp -->
   <section class="bg-primary" id="about">
     <div class="container">
       <div class="row">
@@ -98,6 +106,9 @@
     </div>
   </section>
 
+  <!-- Ändringar av textinnehåll, tillägg av logo, ändring av text på knapp 
+  Tillägg av länk till submit-sidan, i sista row-segmentet.
+  -->
   <section id="services" style="padding-top: 4rem">
     <div class="container">
       <div class="row">
@@ -111,7 +122,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i> <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
             <h3 class="mb-3">Inspiration</h3>
             <p class="text-muted mb-0">
               <br>Get new inspiration from other contributors.
@@ -121,7 +132,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i> <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
             <h3 class="mb-3">Many viewers and subscribers</h3>
             <p class="text-muted mb-0">Our channel has over 50K subscribers,
               <br> and over 13 million viewers.</p>
@@ -129,7 +140,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i> <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
             <h3 class="mb-3">Partners</h3>
             <p class="text-muted mb-0">
               <br> Get in touch with others who like your styles of music.
@@ -139,7 +150,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
+            <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i> <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
             <h3 class="mb-3">Made with Love</h3>
             <p class="text-muted mb-0">
               <br>Since we love the music you make and submit - we love the work we do.</p>
@@ -150,21 +161,22 @@
       <hr>
       <div class="row">
         <p class="text-muted mb-0 col-lg-12 text-center" style="font-size:1.1rem">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScdYzKr5EsjWK42atC2iqeYn7e93LBKfv1GcIwdFLI0muDx2Q/viewform" target="_blank">Submit</a> your music on our channels and reach out to more listeners!
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLScdYzKr5EsjWK42atC2iqeYn7e93LBKfv1GcIwdFLI0muDx2Q/viewform"
+          target="_blank">Submit</a> your music on our channels and reach out to more listeners!
           <br>
           <br>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">What you find on YouTube</a>
         </p>
       </div>
-
     </div>
   </section>
 
+<!-- Ändring av bilder, textinnehåll -->
   <section class="p-0" id="portfolio">
     <div class="container-fluid p-0">
-      <div class="row no-gutters popup-gallery">
+      <div class="row no-gutters ">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/girlGreyBackground.jpg">
+          <a class="portfolio-box" href="https://www.youtube.com/watch?v=2vSmFjKu49M" target="_blank"> 
             <img class="img-fluid" src="img/portfolio/thumbnails/girlGreyBackground.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -194,7 +206,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/guyInMaskSharp.jpg">
+          <a class="portfolio-box" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/playlists"
+          target="_blank">
             <img class="img-fluid" src="img/portfolio/thumbnails/guyInMaskSharp.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -224,7 +237,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/girlWithHood.1.jpg">
+          <a class="portfolio-box" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/channels?view=59&flow=grid"
+          target="_blank">
             <img class="img-fluid" src="img/portfolio/fullsize/girlWithHood.1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -257,22 +271,22 @@
     </div>
   </section>
 
+  <!-- Ändringar av textinnehåll, format, knapp-placering, tillägg av knapp för navigering till nästa sida. -->
+    <!-- PROBLEM - formateringen hänger inte med på ett bra sätt vid olika skärmstorlek.
+    Tror att jag hade behövt ändra på en större del av sektionen för att få till det. -->
   <section class="bg-dark text-white">
-    <div class="container text-center">
+    <div id="post-portfolio">
       <br>
-      <h2 class="mb-4">Contributions to our YouTube-channel:</h2>
-      <p>
+      <h2 class="mb-4">Contributions to our YouTube-channel:
         <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button" href="https://www.youtube.com/watch?v=2vSmFjKu49M" target="_blank">Anime Music/Remixes</a>
-
         <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/channels?view=59&flow=grid"
           target="_blank">Partners</a>
-
-        <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/playlists"
+        <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button mr-5" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/playlists"
           target="_blank">Various playlists</a>
-
-      </p>
-      <p>
-        <br> ...and many more...
+        <a class="btn btn-light btn-xl js-scroll-trigger ml-5" href="#contact">Contact us</a>
+      </h2>
+      <p class="text-center">
+        ...and many more...
       </p>
     </div>
     <br>
@@ -295,11 +309,11 @@
           <hr class="my-4">
           <p class="mb-5">Ready to let us promote your music?
             <br> You can find us on
-            <a href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/featured">YouTube</a>,
-            <a href="https://www.facebook.com/monster.vibes.9">Facebook</a>,
-            <a href="https://www.instagram.com/monstervibes_official/">Instagram</a>,
-            <a href="https://www.snapchat.com/add/monstervibes_og">Snapchat</a> and
-            <a href="https://twitter.com/Monstervibes_og ">Twitter</a>.
+            <a href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/featured"  target="_blank">YouTube</a>,
+            <a href="https://www.facebook.com/monster.vibes.9" target="_blank">Facebook</a>,
+            <a href="https://www.instagram.com/monstervibes_official/" target="_blank">Instagram</a>,
+            <a href="https://www.snapchat.com/add/monstervibes_og" target="_blank">Snapchat</a> and
+            <a href="https://twitter.com/Monstervibes_og " target="_blank">Twitter</a>.
             <br> Give us a call or send us an email and we will get back to you as soon as possible!</p>
         </div>
       </div>
@@ -311,13 +325,19 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
           <p>
-            <a href="mailto:your-email@your-domain.com">monstervibes@monstervibes.com</a>
+            <a href="mailto:your-email@your-domain.com" target="_blank">monstervibes@monstervibes.com</a>
           </p>
         </div>
       </div>
     </div>
   </section>
 
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright © Monster Vibes ft Anna-Maja Lithner 2018</p>
+    </div>
+    <!-- /.container -->
+  </footer>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
