Final version of assignment. html-files from new lecture.

--- a/a-inlämningar/assignment3/startbootstrap-creative-gh-pages/startbootstrap-creative-gh-pages/index.html
+++ b/a-inlämningar/assignment3/startbootstrap-creative-gh-pages/startbootstrap-creative-gh-pages/index.html
@@ -58,6 +58,9 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">Contributions</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#links">YouTube-links</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
@@ -122,7 +125,8 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i> <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
+            <i class="fa fa-4x fa-lightbulb-o text-primary mb-3 sr-icons"></i>
+            <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
             <h3 class="mb-3">Inspiration</h3>
             <p class="text-muted mb-0">
               <br>Get new inspiration from other contributors.
@@ -132,7 +136,8 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i> <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
+            <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
+            <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
             <h3 class="mb-3">Many viewers and subscribers</h3>
             <p class="text-muted mb-0">Our channel has over 50K subscribers,
               <br> and over 13 million viewers.</p>
@@ -140,7 +145,8 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i> <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
+            <i class="fa fa-4x fa-address-card text-primary mb-3 sr-icons"></i>
+            <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
             <h3 class="mb-3">Partners</h3>
             <p class="text-muted mb-0">
               <br> Get in touch with others who like your styles of music.
@@ -150,7 +156,8 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
-            <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i> <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
+            <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
+            <!-- Skulle vilja ändra ikonen, men upptäckte först efter redovisningen var koden log... -->
             <h3 class="mb-3">Made with Love</h3>
             <p class="text-muted mb-0">
               <br>Since we love the music you make and submit - we love the work we do.</p>
@@ -161,8 +168,7 @@
       <hr>
       <div class="row">
         <p class="text-muted mb-0 col-lg-12 text-center" style="font-size:1.1rem">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScdYzKr5EsjWK42atC2iqeYn7e93LBKfv1GcIwdFLI0muDx2Q/viewform"
-          target="_blank">Submit</a> your music on our channels and reach out to more listeners!
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLScdYzKr5EsjWK42atC2iqeYn7e93LBKfv1GcIwdFLI0muDx2Q/viewform" target="_blank">Submit</a> your music on our channels and reach out to more listeners!
           <br>
           <br>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">What you find on YouTube</a>
@@ -171,122 +177,128 @@
     </div>
   </section>
 
-<!-- Ändring av bilder, textinnehåll -->
-  <section class="p-0" id="portfolio">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters ">
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://www.youtube.com/watch?v=2vSmFjKu49M" target="_blank"> 
-            <img class="img-fluid" src="img/portfolio/thumbnails/girlGreyBackground.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Anime/Music remixes
+
+  
+  <!-- Ändring av bilder, textinnehåll -->
+  <!-- I fullskärm stänger man fullskärmsbilderna med kryss på bilden, 
+      men jag förstår inte vad som händer med den funktionen i små-skärmsläge! -->
+      <section class="p-0" id="portfolio">
+        <div class="container-fluid p-0">
+            <div class="row no-gutters popup-gallery">
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/girlGreyBackground.jpg">
+                        <img class="img-fluid" src="img/portfolio/thumbnails/girlGreyBackground.jpg" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Anime/Music remixes
+                                </div>
+                                <div class="project-name">
+                                    24/7 Radio Livestream
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="project-name">
-                  24/7 Radio Livestream
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/guyInGreen.jpg">
+                        <img class="img-fluid" src="img/portfolio/thumbnails/guyInGreen.jpg" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    LoFi Hip Hop
+                                </div>
+                                <div class="project-name">
+                                    Smooth beats for study, sleep, relax
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-              </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/guyInMaskSharp.jpg">
+                        <img class="img-fluid" src="img/portfolio/thumbnails/guyInMaskSharp.jpg" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Playlists
+                                </div>
+                                <div class="project-name">
+                                    Wicked playlists, regularly updated
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/guyInMaskBlurry.jpg">
+                        <img class="img-fluid" src="img/portfolio/thumbnails/guyInMaskBlurry.jpg" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Single videos
+                                </div>
+                                <div class="project-name">
+                                    New videos regularly uploaded
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/girlWithHood1.jpg">
+                        <img class="img-fluid" src="img/portfolio/fullsize/girlWithHood1.jpg" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    We love it,
+                                </div>
+                                <div class="project-name">
+                                    <br> we post it.
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="img/portfolio/fullsize/purpleSuper.jpg">
+                        <img class="img-fluid" src="img/portfolio/thumbnails/purpleSuper.jpg" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Subscribe and like
+                                </div>
+                                <div class="project-name">
+                                    Find us on YouTube and social media
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
-          </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/guyInGreen.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/guyInGreen.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  LoFi Hip Hop
-                </div>
-                <div class="project-name">
-                  Smooth beats for study, sleep, relax
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/playlists"
-          target="_blank">
-            <img class="img-fluid" src="img/portfolio/thumbnails/guyInMaskSharp.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Playlists
-                </div>
-                <div class="project-name">
-                  Wicked playlists, regularly updated
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/guyInMaskBlurry.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/guyInMaskBlurry.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Single videos
-                </div>
-                <div class="project-name">
-                  New videos regularly uploaded
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/channels?view=59&flow=grid"
-          target="_blank">
-            <img class="img-fluid" src="img/portfolio/fullsize/girlWithHood.1.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  We love it,
-                </div>
-                <div class="project-name">
-                  <br> we post it.
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/purpleSuper.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/purpleSuper.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Subscribe and like
-                </div>
-                <div class="project-name">
-                  Find us on YouTube and social media
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
+    </section>
+
+  <!--Tillägg av sektion som hänvisar till knappen "links" i navbar. 
+     Ändringar av textinnehåll, format, knapp-placering, tillägg av knapp för navigering till nästa sida. -->
+
+  <section class="bg-dark text-white">
+    <div class="container text-center">
     </div>
   </section>
-
-  <!-- Ändringar av textinnehåll, format, knapp-placering, tillägg av knapp för navigering till nästa sida. -->
-    <!-- PROBLEM - formateringen hänger inte med på ett bra sätt vid olika skärmstorlek.
-    Tror att jag hade behövt ändra på en större del av sektionen för att få till det. -->
-  <section class="bg-dark text-white">
-    <div id="post-portfolio">
-      <br>
-      <h2 class="mb-4">Contributions to our YouTube-channel:
-        <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button" href="https://www.youtube.com/watch?v=2vSmFjKu49M" target="_blank">Anime Music/Remixes</a>
-        <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/channels?view=59&flow=grid"
+  <section class="bg-dark text-center text-white" id="links">
+    <div class="container">
+      <p class="m-0 text-center text-white">
+        <h2 class="mb-4">Contributions to our YouTube-channel: </h2>
+        <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button mb-2" href="https://www.youtube.com/watch?v=6PD6SxKrMa0" target="_blank">Anime Music/Remixes</a>
+        <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button ml-5 mb-2 mr-5" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/channels?view=59&flow=grid"
           target="_blank">Partners</a>
-        <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button mr-5" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/playlists"
+        <a style="font-size:0.8rem" class="btn btn-light btn-xl sr-button mb-2" href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/playlists"
           target="_blank">Various playlists</a>
-        <a class="btn btn-light btn-xl js-scroll-trigger ml-5" href="#contact">Contact us</a>
-      </h2>
-      <p class="text-center">
-        ...and many more...
+        <br>
+        <p class="text-center">
+          <br> ...and many more...
+        </p>
       </p>
     </div>
     <br>
@@ -296,8 +308,15 @@
       <h2 class="mb-4">Will
         <strong>your</strong> music be our next playlist?</h2>
       <a class="btn btn-light btn-xl sr-button" href="https://docs.google.com/forms/d/e/1FAIpQLScdYzKr5EsjWK42atC2iqeYn7e93LBKfv1GcIwdFLI0muDx2Q/viewform"
-        target="_blank">Submit a song</a>
+        target="_blank" style="margin-bottom:2rem">Submit a song</a>
+      <br>
+      <hr>
+      <br>
+      <br>
+      <br>
+      <a class="btn btn-light btn-xl js-scroll-trigger" href="#contact">Contact us</a>
     </div>
+    <br>
     <br>
   </section>
 
@@ -307,9 +326,10 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Contact Us!</h2>
           <hr class="my-4">
-          <p class="mb-5">Ready to let us promote your music?
+          <p class="mb-5">
+            Ready to let us promote your music? <br>
             <br> You can find us on
-            <a href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/featured"  target="_blank">YouTube</a>,
+            <a href="https://www.youtube.com/channel/UCNcJAWkF7yC0Ng-Cgi46w9Q/featured" target="_blank">YouTube</a>,
             <a href="https://www.facebook.com/monster.vibes.9" target="_blank">Facebook</a>,
             <a href="https://www.instagram.com/monstervibes_official/" target="_blank">Instagram</a>,
             <a href="https://www.snapchat.com/add/monstervibes_og" target="_blank">Snapchat</a> and
@@ -334,22 +354,28 @@
 
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright © Monster Vibes ft Anna-Maja Lithner 2018</p>
+      <p class="m-0 text-center text-white">Copyright ©
+        <br> Content:&nbsp; Monster Vibes --- layout:&nbsp;Anna-Maja&nbsp;Lithner
+        <br> 2018
+      </p>
     </div>
     <!-- /.container -->
   </footer>
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  
 
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-  <!-- Custom scripts for this template -->
-  <script src="js/creative.min.js"></script>
+  
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/creative.min.js"></script>
 </body>
 
 </html>
